--- a/index.html
+++ b/index.html
@@ -3,10 +3,39 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Basic SEO -->
     <title>KSP Universal Hausmeister Service</title>
+    <meta name="description" content="KSP Universal – Hausmeisterservice in Leinfelden-Echterdingen. Reparaturen, Ausbesserungen, Verputz- &amp; Renovierungsarbeiten, Wasser- &amp; Brandschaden-Sanierung, Garten- &amp; Terrassenarbeiten und kleine Entrümpelungen.">
+    <meta name="keywords" content="Hausmeisterservice, Leinfelden-Echterdingen, Reparaturen, Ausbesserungsarbeiten, Renovierung, Verputz, Wasserschaden, Brandschaden, Sanierung, Gartenarbeiten, Terrassenarbeiten, Entrümpelung">
+    <meta name="author" content="KSP Universal">
+    <meta name="robots" content="index,follow">
+    <meta name="theme-color" content="#ffffff">
+
+    <!-- Open Graph (Social Sharing) -->
+    <meta property="og:title" content="KSP Universal – Hausmeister Service">
+    <meta property="og:description" content="Zuverlässiger Hausmeisterservice: Reparaturen, Renovierungsarbeiten, Wasser- &amp; Brandschaden-Sanierung, Garten- &amp; Terrassenarbeiten und kleine Entrümpelungen.">
+    <meta property="og:type" content="website">
+    <meta property="og:locale" content="de_DE">
+    <meta property="og:site_name" content="KSP Universal">
+    <meta property="og:image" content="img/KSP_Universal_500x500.png">
+
+    <!-- Twitter Cards -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="KSP Universal – Hausmeister Service">
+    <meta name="twitter:description" content="Zuverlässiger Hausmeisterservice in Leinfelden-Echterdingen.">
+    <meta name="twitter:image" content="img/KSP_Universal_500x500.png">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
+    <link rel="icon" type="image/png" href="/favicon/favicon-96x96.png" sizes="96x96"/>
+    <link rel="icon" type="image/svg+xml" href="/favicon/favicon.svg"/>
+    <link rel="shortcut icon" href="/favicon/favicon.ico"/>
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png"/>
+    <link rel="manifest" href="/favicon/site.webmanifest"/>
+
+    <meta name="apple-mobile-web-app-title" content="KSP"/>
     <style>
         :root {
             --banner-height: 44px;
@@ -38,7 +67,8 @@
     <nav class="navbar navbar-expand-lg bg-body-tertiary shadow-sm fixed-top mb-5">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
-                <img src="KSPUniversal_497x186.png" alt="Logo" width="49" height="18" class="d-inline-block align-text-top">
+                <img src="img/KSPUniversal_497x186.png" alt="Logo" width="49" height="18"
+                     class="d-inline-block align-text-top">
                 KSP Universal &ndash; Hausmeister Service
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -74,7 +104,7 @@
     <div id="home" class="container col-xxl-8 px-4 py-5">
         <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
             <div class="col-10 col-sm-8 col-lg-6">
-                <img src="KSP_Universal_500x500.png"
+                <img src="img/KSP_Universal_500x500.png"
                      class="d-block mx-lg-auto img-fluid rounded-3"
                      alt="KSP Universal – Hausmeisterservice" loading="lazy">
             </div>
@@ -111,7 +141,8 @@
                                 <i class="bi bi-tools fs-4"></i>
                                 <h3 class="h5 mb-0">Reparaturen &amp; Ausbesserungsarbeiten</h3>
                             </div>
-                            <p class="mb-0 text-body-secondary">Kleine Reparaturen schnell und sauber erledigt – damit alles zuverlässig funktioniert.</p>
+                            <p class="mb-0 text-body-secondary">Kleine Reparaturen schnell und sauber erledigt – damit
+                                alles zuverlässig funktioniert.</p>
                         </div>
                     </div>
                 </div>
@@ -123,7 +154,8 @@
                                 <i class="bi bi-brush fs-4"></i>
                                 <h3 class="h5 mb-0">Kleine Verputz- &amp; Renovierungsarbeiten</h3>
                             </div>
-                            <p class="mb-0 text-body-secondary">Ausbessern, spachteln, streichen – für ein gepflegtes Erscheinungsbild.</p>
+                            <p class="mb-0 text-body-secondary">Ausbessern, spachteln, streichen – für ein gepflegtes
+                                Erscheinungsbild.</p>
                         </div>
                     </div>
                 </div>
@@ -135,7 +167,8 @@
                                 <i class="bi bi-droplet fs-4"></i>
                                 <h3 class="h5 mb-0">Wasserschaden-Sanierung</h3>
                             </div>
-                            <p class="mb-0 text-body-secondary">Große Erfahrung bei Wasserschäden – schnelle Maßnahmen und saubere Wiederherstellung.</p>
+                            <p class="mb-0 text-body-secondary">Große Erfahrung bei Wasserschäden – schnelle Maßnahmen
+                                und saubere Wiederherstellung.</p>
                         </div>
                     </div>
                 </div>
@@ -147,7 +180,8 @@
                                 <i class="bi bi-fire fs-4"></i>
                                 <h3 class="h5 mb-0">Brandschaden-Sanierung</h3>
                             </div>
-                            <p class="mb-0 text-body-secondary">Erfahren in der Brandschadensanierung – strukturiert, zuverlässig und lösungsorientiert.</p>
+                            <p class="mb-0 text-body-secondary">Erfahren in der Brandschadensanierung – strukturiert,
+                                zuverlässig und lösungsorientiert.</p>
                         </div>
                     </div>
                 </div>
@@ -159,7 +193,8 @@
                                 <i class="bi bi-tree fs-4"></i>
                                 <h3 class="h5 mb-0">Garten- &amp; Terrassenarbeiten</h3>
                             </div>
-                            <p class="mb-0 text-body-secondary">Pflege und Instandhaltung im Außenbereich – für saubere Wege und ordentliche Flächen.</p>
+                            <p class="mb-0 text-body-secondary">Pflege und Instandhaltung im Außenbereich – für saubere
+                                Wege und ordentliche Flächen.</p>
                         </div>
                     </div>
                 </div>
@@ -171,7 +206,8 @@
                                 <i class="bi bi-box-seam fs-4"></i>
                                 <h3 class="h5 mb-0">Kleine Entrümpelungen</h3>
                             </div>
-                            <p class="mb-0 text-body-secondary">Keller, Abstellräume oder einzelne Bereiche – schnell, diskret und ordentlich.</p>
+                            <p class="mb-0 text-body-secondary">Keller, Abstellräume oder einzelne Bereiche – schnell,
+                                diskret und ordentlich.</p>
                         </div>
                     </div>
                 </div>
@@ -456,7 +492,9 @@
                                     <i class="bi bi-geo-alt fs-5"></i>
                                     <div>
                                         <div class="fw-semibold">Adresse</div>
-                                        <div class="text-body-secondary">Martin Luther str. 80, 70771 Leinfelden-Echterdingen</div>
+                                        <div class="text-body-secondary">Martin Luther str. 80, 70771
+                                            Leinfelden-Echterdingen
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -465,7 +503,10 @@
                                     <i class="bi bi-telephone fs-5"></i>
                                     <div>
                                         <div class="fw-semibold">Telefon</div>
-                                        <div class="text-body-secondary">+49 176 40491025</div>
+                                        <div class="text-body-secondary">
+                                            <a class="link-secondary text-decoration-none" href="tel:+4917640491025">0176
+                                                40491025</a>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
