--- a/index.html
+++ b/index.html
@@ -6,15 +6,18 @@
 
     <!-- Basic SEO -->
     <title>KSP Universal Hausmeister Service</title>
-    <meta name="description" content="KSP Universal – Hausmeisterservice in Leinfelden-Echterdingen. Reparaturen, Ausbesserungen, Verputz- &amp; Renovierungsarbeiten, Wasser- &amp; Brandschaden-Sanierung, Garten- &amp; Terrassenarbeiten und kleine Entrümpelungen.">
-    <meta name="keywords" content="Hausmeisterservice, Leinfelden-Echterdingen, Reparaturen, Ausbesserungsarbeiten, Renovierung, Verputz, Wasserschaden, Brandschaden, Sanierung, Gartenarbeiten, Terrassenarbeiten, Entrümpelung">
+    <meta name="description"
+          content="KSP Universal – Hausmeisterservice in Leinfelden-Echterdingen. Reparaturen, Ausbesserungen, Verputz- &amp; Renovierungsarbeiten, Wasser- &amp; Brandschaden-Sanierung, Garten- &amp; Terrassenarbeiten und kleine Entrümpelungen.">
+    <meta name="keywords"
+          content="Hausmeisterservice, Leinfelden-Echterdingen, Reparaturen, Ausbesserungsarbeiten, Renovierung, Verputz, Wasserschaden, Brandschaden, Sanierung, Gartenarbeiten, Terrassenarbeiten, Entrümpelung">
     <meta name="author" content="KSP Universal">
     <meta name="robots" content="index,follow">
     <meta name="theme-color" content="#ffffff">
 
     <!-- Open Graph (Social Sharing) -->
     <meta property="og:title" content="KSP Universal – Hausmeister Service">
-    <meta property="og:description" content="Zuverlässiger Hausmeisterservice: Reparaturen, Renovierungsarbeiten, Wasser- &amp; Brandschaden-Sanierung, Garten- &amp; Terrassenarbeiten und kleine Entrümpelungen.">
+    <meta property="og:description"
+          content="Zuverlässiger Hausmeisterservice: Reparaturen, Renovierungsarbeiten, Wasser- &amp; Brandschaden-Sanierung, Garten- &amp; Terrassenarbeiten und kleine Entrümpelungen.">
     <meta property="og:type" content="website">
     <meta property="og:locale" content="de_DE">
     <meta property="og:site_name" content="KSP Universal">
@@ -69,7 +72,7 @@
             <a class="navbar-brand" href="#">
                 <img src="img/KSPUniversal_497x186.png" alt="Logo" width="49" height="18"
                      class="d-inline-block align-text-top">
-                KSP Universal &ndash; Hausmeister Service
+                KSP Universal
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
