--- a/index.html
+++ b/index.html
@@ -144,8 +144,19 @@
                                 <i class="bi bi-tools fs-4"></i>
                                 <h3 class="h5 mb-0">Reparaturen &amp; Ausbesserungsarbeiten</h3>
                             </div>
-                            <p class="mb-0 text-body-secondary">Kleine Reparaturen schnell und sauber erledigt – damit
-                                alles zuverlässig funktioniert.</p>
+                            <p class="mb-0 text-body-secondary">Kleine Reparaturen und Ausbesserungen schnell, sauber und zuverlässig erledigt.</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class="card h-100 shadow-sm">
+                        <div class="card-body">
+                            <div class="d-flex align-items-center gap-2 mb-2">
+                                <i class="bi bi-snow fs-4"></i>
+                                <h3 class="h5 mb-0">Garten- &amp; Winterdienst</h3>
+                            </div>
+                            <p class="mb-0 text-body-secondary">Pflege im Außenbereich sowie Winterdienst nach Absprache – damit alles sicher und ordentlich bleibt.</p>
                         </div>
                     </div>
                 </div>
@@ -155,10 +166,9 @@
                         <div class="card-body">
                             <div class="d-flex align-items-center gap-2 mb-2">
                                 <i class="bi bi-brush fs-4"></i>
-                                <h3 class="h5 mb-0">Kleine Verputz- &amp; Renovierungsarbeiten</h3>
+                                <h3 class="h5 mb-0">Renovierung &amp; Verputz</h3>
                             </div>
-                            <p class="mb-0 text-body-secondary">Ausbessern, spachteln, streichen – für ein gepflegtes
-                                Erscheinungsbild.</p>
+                            <p class="mb-0 text-body-secondary">Renovierungsarbeiten, Verputz und kleinere Ausbesserungen – für ein gepflegtes Erscheinungsbild.</p>
                         </div>
                     </div>
                 </div>
@@ -168,23 +178,9 @@
                         <div class="card-body">
                             <div class="d-flex align-items-center gap-2 mb-2">
                                 <i class="bi bi-droplet fs-4"></i>
-                                <h3 class="h5 mb-0">Wasserschaden-Sanierung</h3>
+                                <h3 class="h5 mb-0">Wasser- &amp; Brandschaden-Sanierungen</h3>
                             </div>
-                            <p class="mb-0 text-body-secondary">Große Erfahrung bei Wasserschäden – schnelle Maßnahmen
-                                und saubere Wiederherstellung.</p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-12 col-md-6 col-lg-4">
-                    <div class="card h-100 shadow-sm">
-                        <div class="card-body">
-                            <div class="d-flex align-items-center gap-2 mb-2">
-                                <i class="bi bi-fire fs-4"></i>
-                                <h3 class="h5 mb-0">Brandschaden-Sanierung</h3>
-                            </div>
-                            <p class="mb-0 text-body-secondary">Erfahren in der Brandschadensanierung – strukturiert,
-                                zuverlässig und lösungsorientiert.</p>
+                            <p class="mb-0 text-body-secondary">Erfahren in Wasser- und Brandschadensanierung – schnelle Maßnahmen und saubere Wiederherstellung.</p>
                         </div>
                     </div>
                 </div>
@@ -196,8 +192,7 @@
                                 <i class="bi bi-tree fs-4"></i>
                                 <h3 class="h5 mb-0">Garten- &amp; Terrassenarbeiten</h3>
                             </div>
-                            <p class="mb-0 text-body-secondary">Pflege und Instandhaltung im Außenbereich – für saubere
-                                Wege und ordentliche Flächen.</p>
+                            <p class="mb-0 text-body-secondary">Arbeiten rund um Garten und Terrasse – Pflege, Instandhaltung und Ordnung im Außenbereich.</p>
                         </div>
                     </div>
                 </div>
@@ -206,11 +201,22 @@
                     <div class="card h-100 shadow-sm">
                         <div class="card-body">
                             <div class="d-flex align-items-center gap-2 mb-2">
-                                <i class="bi bi-box-seam fs-4"></i>
-                                <h3 class="h5 mb-0">Kleine Entrümpelungen</h3>
+                                <i class="bi bi-truck fs-4"></i>
+                                <h3 class="h5 mb-0">Kleine Transporte &amp; Entrümpelung</h3>
                             </div>
-                            <p class="mb-0 text-body-secondary">Keller, Abstellräume oder einzelne Bereiche – schnell,
-                                diskret und ordentlich.</p>
+                            <p class="mb-0 text-body-secondary">Kleine Transporte sowie Entrümpelungen (z. B. Keller/Abstellräume) – schnell, diskret und ordentlich.</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class="card h-100 shadow-sm">
+                        <div class="card-body">
+                            <div class="d-flex align-items-center gap-2 mb-2">
+                                <i class="bi bi-hammer fs-4"></i>
+                                <h3 class="h5 mb-0">Montage im Haus</h3>
+                            </div>
+                            <p class="mb-0 text-body-secondary">Montagearbeiten im Haus – fachgerecht, sauber und nach Absprache.</p>
                         </div>
                     </div>
                 </div>
@@ -527,7 +533,7 @@
                                     <i class="bi bi-clock fs-5"></i>
                                     <div>
                                         <div class="fw-semibold">Erreichbarkeit</div>
-                                        <div class="text-body-secondary">Mo–Fr: 08:00–18:00 (Notfälle nach Absprache)
+                                        <div class="text-body-secondary">Mo–So: 08:00–19:00 (Notfälle nach Absprache)
                                         </div>
                                     </div>
                                 </div>
