--- a/index.html
+++ b/index.html
@@ -39,37 +39,13 @@
     <link rel="manifest" href="/favicon/site.webmanifest"/>
 
     <meta name="apple-mobile-web-app-title" content="KSP"/>
-    <style>
-        :root {
-            --banner-height: 44px;
-        }
-
-        .site-banner {
-            height: var(--banner-height);
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            z-index: 1090; /* above navbar */
-        }
-
-        .navbar.fixed-top {
-            top: var(--banner-height);
-        }
-    </style>
 </head>
 <body>
-
-<div class="site-banner bg-warning-subtle border-bottom fixed-top px-3 text-center">
-    <small class="fw-semibold">
-        <i class="bi bi-exclamation-triangle-fill me-2"></i>
-        Website in Bearbeitung – dies ist eine Vorab-Version.
-    </small>
-</div>
 
 <header>
     <nav class="navbar navbar-expand-lg bg-body-tertiary shadow-sm fixed-top mb-5">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="index.html">
                 <img src="img/KSPUniversal_497x186.png" alt="Logo" width="49" height="18"
                      class="d-inline-block align-text-top">
                 KSP Universal
@@ -81,29 +57,30 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#home">Start</a>
+                        <a class="nav-link" aria-current="page" href="index.html#home">Start</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#leistungen">Leistungen</a>
+                        <a class="nav-link" href="index.html#leistungen">Leistungen</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#ueber-uns">Über uns</a>
+                        <a class="nav-link" href="index.html#ueber-uns">Über uns</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#ablauf">Ablauf</a>
+                        <a class="nav-link" href="index.html#ablauf">Ablauf</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#faq">FAQ</a>
+                        <a class="nav-link" href="index.html#faq">FAQ</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#kontakt">Kontakt</a>
+                        <a class="nav-link" href="index.html#kontakt">Kontakt</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
 </header>
-<main class="pt-5" style="padding-top: calc(3rem + var(--banner-height));">
+
+<main class="pt-5">
     <div id="home" class="container col-xxl-8 px-4 py-5">
         <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
             <div class="col-10 col-sm-8 col-lg-6">
@@ -144,7 +121,8 @@
                                 <i class="bi bi-tools fs-4"></i>
                                 <h3 class="h5 mb-0">Reparaturen &amp; Ausbesserungsarbeiten</h3>
                             </div>
-                            <p class="mb-0 text-body-secondary">Kleine Reparaturen und Ausbesserungen schnell, sauber und zuverlässig erledigt.</p>
+                            <p class="mb-0 text-body-secondary">Kleine Reparaturen und Ausbesserungen schnell, sauber
+                                und zuverlässig erledigt.</p>
                         </div>
                     </div>
                 </div>
@@ -156,7 +134,8 @@
                                 <i class="bi bi-snow fs-4"></i>
                                 <h3 class="h5 mb-0">Garten- &amp; Winterdienst</h3>
                             </div>
-                            <p class="mb-0 text-body-secondary">Pflege im Außenbereich sowie Winterdienst nach Absprache – damit alles sicher und ordentlich bleibt.</p>
+                            <p class="mb-0 text-body-secondary">Pflege im Außenbereich sowie Winterdienst nach Absprache
+                                – damit alles sicher und ordentlich bleibt.</p>
                         </div>
                     </div>
                 </div>
@@ -168,7 +147,8 @@
                                 <i class="bi bi-brush fs-4"></i>
                                 <h3 class="h5 mb-0">Renovierung &amp; Verputz</h3>
                             </div>
-                            <p class="mb-0 text-body-secondary">Renovierungsarbeiten, Verputz und kleinere Ausbesserungen – für ein gepflegtes Erscheinungsbild.</p>
+                            <p class="mb-0 text-body-secondary">Renovierungsarbeiten, Verputz und kleinere
+                                Ausbesserungen – für ein gepflegtes Erscheinungsbild.</p>
                         </div>
                     </div>
                 </div>
@@ -180,7 +160,8 @@
                                 <i class="bi bi-droplet fs-4"></i>
                                 <h3 class="h5 mb-0">Wasser- &amp; Brandschaden-Sanierungen</h3>
                             </div>
-                            <p class="mb-0 text-body-secondary">Erfahren in Wasser- und Brandschadensanierung – schnelle Maßnahmen und saubere Wiederherstellung.</p>
+                            <p class="mb-0 text-body-secondary">Erfahren in Wasser- und Brandschadensanierung – schnelle
+                                Maßnahmen und saubere Wiederherstellung.</p>
                         </div>
                     </div>
                 </div>
@@ -192,7 +173,8 @@
                                 <i class="bi bi-tree fs-4"></i>
                                 <h3 class="h5 mb-0">Garten- &amp; Terrassenarbeiten</h3>
                             </div>
-                            <p class="mb-0 text-body-secondary">Arbeiten rund um Garten und Terrasse – Pflege, Instandhaltung und Ordnung im Außenbereich.</p>
+                            <p class="mb-0 text-body-secondary">Arbeiten rund um Garten und Terrasse – Pflege,
+                                Instandhaltung und Ordnung im Außenbereich.</p>
                         </div>
                     </div>
                 </div>
@@ -204,7 +186,8 @@
                                 <i class="bi bi-truck fs-4"></i>
                                 <h3 class="h5 mb-0">Kleine Transporte &amp; Entrümpelung</h3>
                             </div>
-                            <p class="mb-0 text-body-secondary">Kleine Transporte sowie Entrümpelungen (z. B. Keller/Abstellräume) – schnell, diskret und ordentlich.</p>
+                            <p class="mb-0 text-body-secondary">Kleine Transporte sowie Entrümpelungen (z. B.
+                                Keller/Abstellräume) – schnell, diskret und ordentlich.</p>
                         </div>
                     </div>
                 </div>
@@ -216,7 +199,8 @@
                                 <i class="bi bi-hammer fs-4"></i>
                                 <h3 class="h5 mb-0">Montage im Haus</h3>
                             </div>
-                            <p class="mb-0 text-body-secondary">Montagearbeiten im Haus – fachgerecht, sauber und nach Absprache.</p>
+                            <p class="mb-0 text-body-secondary">Montagearbeiten im Haus – fachgerecht, sauber und nach
+                                Absprache.</p>
                         </div>
                     </div>
                 </div>
@@ -563,22 +547,24 @@
         <div class="container">
             <div class="row align-items-center g-3">
                 <div class="col-12 col-md-6">
-                    <div class="text-body-secondary">© <span id="year"></span> KSP Universal – Hausmeister Service</div>
+                    <div class="text-body-secondary">© 2024 KSP Universal – Hausmeister Service</div>
                 </div>
                 <div class="col-12 col-md-6">
                     <div class="d-flex gap-3 justify-content-md-end">
-                        <a class="link-secondary text-decoration-none" href="#">Impressum</a>
-                        <a class="link-secondary text-decoration-none" href="#">Datenschutz</a>
+                        <a class="link-secondary text-decoration-none" href="impressum.html">Impressum</a>
+                        <a class="link-secondary text-decoration-none" href="datenschutz.html">Datenschutz</a>
                     </div>
                 </div>
             </div>
         </div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
-            crossorigin="anonymous"></script>
-    <script>
-        document.getElementById("year").textContent = new Date().getFullYear().toString();
-    </script>
+
+</main>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+        crossorigin="anonymous"></script>
+<script>
+    document.getElementById("year").textContent = new Date().getFullYear().toString();
+</script>
 </body>
 </html>
